# testing-APIs

./: .gitignore  .pre-commit-config.yaml  Company House API.url  README.md  company_house.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
Alteryx-Gallery/: alteryx-raw.py  alteryx.py  main.py
Braze/: braze.py  main.py
Companies-House/: Companies House API.url  companies-house.db  companies_house.py  companies_house_connector.py  main.py
Companies-House/DDL/: company_officers.sql  company_profile.sql
Companies-House/companies_house/: .env  __init__.py  companies_house.py  connector.py
Companies-House/companies_house/utils/: decorators.py  enums.py  exceptions.py
Company-House/: company_house.py  main.py
Confluence/: confluence.py  main.py
Gmail/: main.py
Google-Sheets/: main.py  sheets.py
Jira/: jira.py  main.py
Metabase/: embedding.py  main.py  metabase.py
Notion/: main.py  notion.py
Slack/: main.py  old-code.py
Slack-Work/: main.py
Tableau/: Email-Writer.xlsm  get-emails.py  main.py  tableau.py  tableau_server_client.py
Tempo/: main.py
Twilio/: main.py  twilio.py
Vault/: main.py  vault.py
src/: __init__.py
src/apis/alteryx_gallery/: __init__.py  alteryx.py  alteryx_alt.py  connector.py  connector_alt.py  main.py  requirements.txt
src/apis/braze/: __init__.py  braze.py  connector.py  main.py
src/apis/companies_house/: __init__.py  connector.py  main.py  model.py
src/apis/confluence/: __init__.py  (+3 more)
src/utils/: __init__.py  utils.py
tests/utils/: test__utils.py
utils/: __init__.py  utils.py
(+64 files in other folders)
