[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-apis"
version = "0.0.0"
description = "Testing REST APIs either for personal projects or for work."
authors = [{name = "Bilbottom"}]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]


[tool.setuptools]
packages = ["src"]
dynamic.dependencies = {file = ["requirements.txt"]}


[tool.pytest.ini_options]
addopts = "--cov=src"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"*.py" = [
    "S105",    #  Possible hardcoded password assigned to variable
    "S106",    #  Possible hardcoded password assigned to argument
    "S113",    #  Probable use of `requests` call without timeout
    "PLR0913", #  Too many arguments in function definition
]
"tests/**/*.py" = [
    "S101",    #  Use of `assert` detected
    "PLR2004", #  Magic value used in comparison
]
